[tool.poetry]
name = "multiply_package"
version = "0.1.0"
description = "python libraries for exercises purposes"
authors = ["raphaeldubourg <raphael.dubourg@ens-paris-saclay.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
